# taxes

./: .pre-commit-config.yaml  AGENTS.md  README.md  justfile  pyproject.toml  requirements.txt  setup.cfg  setup.py  statements2csv.py
.git-crypt/keys/default/0/: 1567C6D6C2EA4D953EDAD565E62E105D345C79FB.gpg
.github/workflows/: python-app.yml
scripts/: check.py
src/greptransactions/: __main__.py  csv2tsv.py  greptransactions.sh
src/statements2csv/: __main__.py  extract.py  extractors.py
src/taxes/: __init__.py  paths.py
statements2csv/: __main__.py  applecard.py  cli.py  extract.py  extractors.py
tests/: snapshot_extensions.py  test_integration.py
tests/__snapshots__/secrets/: test_integration.ambr
tests/__snapshots__/secrets/all/: test_integration.ambr
tests/greptransactions/: __init__.py  test_main.py
tests/scripts/: test_check.py
tests/secrets/: all_pdfs.lnk
tests/statements2csv/: conftest.py  test_extract.py  test_integration.py
tests/statements2csv/__snapshots__/secrets/: test_integration.ambr
tests/statements2csv/secrets/: all_pdfs.lnk  all_pdfs_snapshot.txt
tests/taxes/: __init__.py  test_paths.py
