[project]
name = "taxes"
version = "1.0.0"
license = { text = "Proprietary" }
requires-python = ">=3.10"
dependencies = [
    "PyPDF2 < 3.0",
    "camelot-py[all]",
    "click",
    "pandas",
]

[project.optional-dependencies]
testing = [
    "black",
    "freezegun",
    "mypy",
    "pandas-stubs",
    "pre-commit",
    "pytest",
    "pytest-cov",
    "ruff",
    "syrupy",
    "types-python-dateutil",
    "wcmatch",
]

[project.scripts]
statements2csv = "statements2csv.__main__:main"
gt = "greptransactions.__main__:main"

[tool.mypy]
check_untyped_defs = true
disallow_incomplete_defs = true
disallow_untyped_calls = true
disallow_untyped_defs = true
show_error_codes = true

[tool.ruff]
src = ["src", "tests"]

[tool.ruff.lint]
select = [
  "A",
  "B",
  "C",
  "D",
  "E",
  "F",
  "I",
  "N",
  "UP",
  "W",
]
# E501 - line too long; if Black does its job, I'm not worried about the rare long line
ignore = ["E501"]

[tool.ruff.lint.pydocstyle]
convention = "pep257"

[tool.pytest.ini_options]
addopts = [
  '--cov',
  'src',
  '--cov-report',
  'html',
  '--snapshot-default-extension',
  'tests.snapshot_extensions.CryptAwareExtension',
]
