[project]
name = "taxes"
version = "1.0.0"
license = { text = "Proprietary" }
requires-python = ">=3.10"
dependencies = [
    "PyPDF2 < 3.0",
    "camelot-py[all]",
    "click",
    "pandas",
]

[project.optional-dependencies]
testing = [
    "freezegun",
    "mypy",
    "pandas-stubs",
    "pre-commit",
    "pytest",
    "pytest-cov",
    "ruff",
    "syrupy",
    "types-python-dateutil",
    "wcmatch",
]

[project.scripts]
statements2csv = "statements2csv.__main__:main"
gt = "greptransactions.__main__:main"

[tool.mypy]
strict = true

[tool.ruff]
src = ["src", "tests"]

[tool.ruff.lint]
select = [
  "A",
  "B",
  "C",
  "D",
  "E",
  "F",
  "I",
  "N",
  "UP",
  "W",
]
# E501 - line too long; if formatter does its job, I'm not worried about the rare long line
ignore = ["E501"]

[tool.ruff.lint.pydocstyle]
convention = "pep257"

[tool.pytest.ini_options]
addopts = [
  '--cov',
  'src',
  '--cov-report',
  'html',
  '--snapshot-default-extension',
  'tests.snapshot_extensions.CryptAwareExtension',
]
