[metadata]
name=taxes
version=0.1

[options]
install_requires =
    camelot-py[all]
    click
    pandas

packages = find:

[options.extras_require]
testing =
    black
    mypy
    pandas-stubs
    pre-commit
    pylint
    types-python-dateutil

[options.entry_points]
console_scripts =
    statements2csv = statements2csv.__main__:main
