[metadata]
name = taxes
version = 1.0.0
license = UNLICENSED

[mypy]
check_untyped_defs = True
disallow_incomplete_defs = True
disallow_untyped_calls = True
disallow_untyped_defs = True

[options]
install_requires =
    camelot-py[all]
    click
    pandas

python_requires = >=3.10

packages = find:

[options.extras_require]
testing =
    black
    mypy
    pandas-stubs
    pre-commit
    pytest
    ruff
    types-python-dateutil

[options.entry_points]
console_scripts =
    statements2csv = statements2csv.__main__:main
